# ni50-badge-starter

./: .gitignore  README.md
boards/2.8-inch/: README.md
boards/2.8-inch/project/: .gitignore  CHANGELOG.md  CMakeLists.txt  PROJECT_CONTEXT.md  README.md  build.ps1  sdkconfig  sdkconfig.defaults
boards/2.8-inch/project/components/chmorgan__esp-audio-player/: CMakeLists.txt
boards/2.8-inch/project/main/: CMakeLists.txt  Kconfig.projbuild  main.c  version.h
boards/2.8-inch/project/main/Config_Server/: config_page.html  config_server.c  config_server.h
boards/2.8-inch/project/main/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
boards/2.8-inch/project/main/LCD_Driver/: ST7789.c
boards/2.8-inch/project/main/LCD_Driver/Vernon_ST7789T/: Vernon_ST7789T.h
boards/2.8-inch/project/main/LVGL_Driver/: LVGL_Driver.c
boards/2.8-inch/project/main/LVGL_UI/: Badge_UI.c  Badge_UI.h  game_lab.c  game_lab.h  game_match3.c  game_match3.h  game_trivia.c  game_trivia.h  img_avatar.c  img_bg_pattern.c  img_cartoon.c  img_ni5040.c  page_calendar.c  page_calendar.h  page_config.c  page_config.h  page_easter_egg.c  page_easter_egg.h  page_gallery.c  page_gallery.h  page_settings.c  page_settings.h
boards/2.8-inch/project/main/LVGL_UI/cards/: card_images.h  img_card_cdaq_9174_edit.c  img_card_diadem.c  img_card_flexlogger.c  img_card_labview.c  img_card_ni_9215_edit.c  img_card_pxie_1084_edit.c  img_card_pxie_5842_edit.c  img_card_pxie_8862_edit.c  img_card_systemlink.c  img_card_teststand.c  img_card_usb_6003_edit.c  img_card_veristand.c
boards/2.8-inch/project/main/LVGL_UI/gallery/: gallery_images.h  img_lv1_block_diagram.c  img_lv1_news.c  img_lv1_splash.c  img_nilogo_1.c  img_nilogo_2.c  img_nilogo_3.c  img_nilogo_4.c  img_nilogo_5.c  img_nilogo_6.c  img_nilogo_7.c
boards/2.8-inch/project/main/LVGL_UI/game_tiles/: game_tiles.h  img_tile_cdaq_9171.c  img_tile_compactrio.c  img_tile_crio_9045.c  img_tile_diadem.c  img_tile_flexlogger.c  img_tile_labview.c  img_tile_ni50_badge.c  img_tile_ni_logo_dark.c  img_tile_ni_switch.c  img_tile_pcie_6357.c  img_tile_pxi_2567.c  img_tile_pxi_4110.c  img_tile_pxi_4461.c  img_tile_pxi_system.c  img_tile_pxie_4322.c  img_tile_pxie_5622.c  img_tile_pxie_chassis.c  img_tile_scope_5105.c  img_tile_systemlink.c  img_tile_teststand.c  img_tile_usb_6343.c  img_tile_veristand.c
boards/2.8-inch/project/main/Touch_Driver/: CST328.c  CST328.h
boards/2.8-inch/project/tools/: convert_gallery_images.py  convert_game_tiles.py  fix_2048_calibration.py  fix_calibration.py  fix_tilt_and_player.py  gen_cards.py  gen_cartoon.py  img_to_lvgl.py  patch_cmake.py  patch_match3.py
boards/4-inch/: README.md
boards/4-inch/project/: CMakeLists.txt  PROJECT_CONTEXT.md  README.md  sdkconfig  sdkconfig.defaults
boards/4-inch/project/docs/: bring-up-checklist.md  migration-design.md
boards/4-inch/project/main/: CMakeLists.txt  idf_component.yml  main.c
boards/4-inch/project/main/app/: app_boot.c  app_router.c  svc_profile.c  svc_profile.h  svc_rtc.c  svc_rtc.h  svc_web_config.c  svc_web_config.h
boards/4-inch/project/main/assets/: img_avatar_160.c  img_bg_pattern.c  img_ni5040_logo.c  img_ni_logo_sm.c  img_wechat_qr.c
boards/4-inch/project/main/assets/gallery/: img_lv1_block.c  img_lv1_news.c  img_lv1_splash.c  img_lv_bd_unwired.c  img_lv_bd_wired.c  img_lv_fp_broken.c  img_lv_fp_runnable.c  img_lv_preview.c  img_ms_1976.c  img_ms_1986.c  img_ms_1995.c  img_ms_1997.c  img_ms_2004.c  img_ms_2023.c  img_ms_2026.c  img_nilogo_1.c  img_nilogo_2.c  img_nilogo_3.c  img_nilogo_4.c  img_nilogo_5.c  img_nilogo_6.c  img_nilogo_7.c
boards/4-inch/project/main/system/: sys_idle.c  sys_idle.h  sys_tabbar.c
boards/4-inch/project/main/ui/: game_trivia.c  page_calendar.c  page_card.c  page_config.c  page_easter_egg.c  page_gallery.c  page_logo_history.c  page_milestones.c  ui.c  ui.h  widget_nav.c  widget_pagedots.c  widget_statusbar.c
boards/4-inch/project/patches/: apply_patches.ps1
boards/4-inch/project/tools/: convert_all_assets.py  img2lvgl.py
docs/: copilot-prompts.md  github-readonly-setup.md  quick-start.md  share-scope.md
