idf_component_register(
                         SRCS 
                              "./main.c" 
                              "./Audio_Driver/PCM5101.c" 
                              "./LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c" 
                              "./LCD_Driver/ST7789.c"
                              "./Touch_Driver/esp_lcd_touch/esp_lcd_touch.c"        
                              "./Touch_Driver/CST328.c"  
                              "./LVGL_Driver/LVGL_Driver.c"
                              "./LVGL_UI/Badge_UI.c"
                              "./LVGL_UI/game_match3.c"
                              "./LVGL_UI/game_tiles/img_tile_pcie_6357.c"
                              "./LVGL_UI/game_tiles/img_tile_pxie_4322.c"
                              "./LVGL_UI/game_tiles/img_tile_ni_logo_dark.c"
                              "./LVGL_UI/game_tiles/img_tile_pxi_4110.c"
                              "./LVGL_UI/game_tiles/img_tile_pxie_chassis.c"
                              "./LVGL_UI/game_tiles/img_tile_crio_9045.c"
                              "./LVGL_UI/game_tiles/img_tile_pxi_2567.c"
                              "./LVGL_UI/game_tiles/img_tile_usb_6343.c"
                              "./LVGL_UI/game_tiles/img_tile_pxi_4461.c"
                              "./LVGL_UI/game_tiles/img_tile_scope_5105.c"
                              "./LVGL_UI/game_tiles/img_tile_cdaq_9171.c"
                              "./LVGL_UI/game_tiles/img_tile_pxie_5622.c"
                              "./LVGL_UI/game_tiles/img_tile_pxi_system.c"
                              "./LVGL_UI/game_tiles/img_tile_compactrio.c"
                              "./LVGL_UI/game_tiles/img_tile_ni_switch.c"
                              "./LVGL_UI/game_tiles/img_tile_diadem.c"
                              "./LVGL_UI/game_tiles/img_tile_flexlogger.c"
                              "./LVGL_UI/game_tiles/img_tile_labview.c"
                              "./LVGL_UI/game_tiles/img_tile_ni50_badge.c"
                              "./LVGL_UI/game_tiles/img_tile_systemlink.c"
                              "./LVGL_UI/game_tiles/img_tile_teststand.c"
                              "./LVGL_UI/game_tiles/img_tile_veristand.c"
                              "./LVGL_UI/img_avatar.c"
                              "./LVGL_UI/img_ni5040.c"
                              "./LVGL_UI/img_bg_pattern.c"
                              "./LVGL_UI/img_cartoon.c"
                              "./LVGL_UI/cards/img_card_cdaq_9174_edit.c"
                              "./LVGL_UI/cards/img_card_diadem.c"
                              "./LVGL_UI/cards/img_card_flexlogger.c"
                              "./LVGL_UI/cards/img_card_labview.c"
                              "./LVGL_UI/cards/img_card_ni_9215_edit.c"
                              "./LVGL_UI/cards/img_card_pxie_1084_edit.c"
                              "./LVGL_UI/cards/img_card_pxie_5842_edit.c"
                              "./LVGL_UI/cards/img_card_pxie_8862_edit.c"
                              "./LVGL_UI/cards/img_card_systemlink.c"
                              "./LVGL_UI/cards/img_card_teststand.c"
                              "./LVGL_UI/cards/img_card_usb_6003_edit.c"
                              "./LVGL_UI/cards/img_card_veristand.c"
                              "./SD_Card/SD_MMC.c" 
                              "./I2C_Driver/I2C_Driver.c"
                              "./PCF85063/PCF85063.c"
                              "./QMI8658/QMI8658.c"
                              "./BAT_Driver/BAT_Driver.c"
                              "./PWR_Key/PWR_Key.c"
                              "./Wireless/Wireless.c"
                              "./Config_Server/config_server.c"
                              "./LVGL_UI/page_config.c"
                              "./LVGL_UI/page_settings.c"
                              "./LVGL_UI/page_calendar.c"
                              "./LVGL_UI/page_easter_egg.c"
                              "./LVGL_UI/game_trivia.c"
                              "./LVGL_UI/game_lab.c"
                              "./LVGL_UI/page_gallery.c"
                              "./LVGL_UI/gallery/img_nilogo_1.c"
                              "./LVGL_UI/gallery/img_nilogo_2.c"
                              "./LVGL_UI/gallery/img_nilogo_3.c"
                              "./LVGL_UI/gallery/img_nilogo_4.c"
                              "./LVGL_UI/gallery/img_nilogo_5.c"
                              "./LVGL_UI/gallery/img_nilogo_6.c"
                              "./LVGL_UI/gallery/img_nilogo_7.c"
                              "./LVGL_UI/gallery/img_lv1_block_diagram.c"
                              "./LVGL_UI/gallery/img_lv1_splash.c"
                              "./LVGL_UI/gallery/img_lv1_news.c"

                         INCLUDE_DIRS 
                              "./Audio_Driver" 
                              "./LCD_Driver/Vernon_ST7789T" 
                              "./LCD_Driver" 
                              "./Touch_Driver/esp_lcd_touch"     
                              "./Touch_Driver"
                              "./LVGL_Driver" 
                              "./LVGL_UI" 
                              "./LVGL_UI/cards"
                              "./LVGL_UI/game_tiles"
                              "./LVGL_UI/gallery"
                              "./SD_Card" 
                              "./I2C_Driver"
                              "./PCF85063"
                              "./QMI8658"
                              "./BAT_Driver"
                              "./PWR_Key"
                              "./Wireless"
                              "./Config_Server"
                              "."
                       )

# Embed HTML page as binary data
target_add_binary_data(${COMPONENT_TARGET} "./Config_Server/config_page.html" TEXT)
