idf_component_register(
    SRCS "main.c"
         "app/app_boot.c"
         "app/app_router.c"
         "app/svc_profile.c"
         "app/svc_rtc.c"
         "app/svc_web_config.c"
         "system/sys_idle.c"
         "system/sys_tabbar.c"
         "ui/ui.c"
         "ui/page_card.c"
         "ui/page_milestones.c"
         "ui/page_gallery.c"
         "ui/page_calendar.c"
         "ui/page_config.c"
         "ui/page_easter_egg.c"
         "ui/page_logo_history.c"
         "ui/game_trivia.c"
         "ui/widget_statusbar.c"
         "ui/widget_pagedots.c"
         "ui/widget_nav.c"
         "assets/img_avatar_160.c"
         "assets/img_ni5040_logo.c"
         "assets/img_bg_pattern.c"
         "assets/img_wechat_qr.c"
         "assets/gallery/img_ms_1976.c"
         "assets/gallery/img_ms_1986.c"
         "assets/gallery/img_ms_1995.c"
         "assets/gallery/img_ms_1997.c"
         "assets/gallery/img_ms_2004.c"
         "assets/gallery/img_ms_2023.c"
         "assets/gallery/img_ms_2026.c"
         "assets/gallery/img_lv1_splash.c"
         "assets/gallery/img_lv1_block.c"
         "assets/gallery/img_lv1_news.c"
         "assets/gallery/img_lv_fp_broken.c"
         "assets/gallery/img_lv_fp_runnable.c"
         "assets/gallery/img_lv_bd_unwired.c"
         "assets/gallery/img_lv_bd_wired.c"
         "assets/gallery/img_lv_preview.c"
         "assets/gallery/img_nilogo_1.c"
         "assets/gallery/img_nilogo_2.c"
         "assets/gallery/img_nilogo_3.c"
         "assets/gallery/img_nilogo_4.c"
         "assets/gallery/img_nilogo_5.c"
         "assets/gallery/img_nilogo_6.c"
         "assets/gallery/img_nilogo_7.c"
    INCLUDE_DIRS "." "app" "system" "ui" "assets" "assets/gallery"
    PRIV_REQUIRES nvs_flash esp_wifi esp_event esp_netif esp_http_server
)
